--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -5,19 +5,42 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 1rem;
+    padding: 2rem 3rem 1rem;
     position: fixed;
     top: 0;
     width: 100%;
 
     &__title {
-        font-size: 2.5rem;
+        font-size: 2rem;
         color: white;
     }
 
     &__link {
-        font-size: 2.5rem;
+        font-size: 2rem;
         text-decoration: none;
         color: white;
     }
+
+    &__underline {
+        background: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
+        height: .34rem;
+        width: 0%;
+        margin-top: .8rem;
+        margin-bottom: 0;
+        transition: all .1s;
+    }
+
+    &__link:hover &__underline {
+        width: 100%;
+    }
+
+    // &__underline {
+    //     background: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
+    //     height: .34rem;
+    //     width: 100%;
+    //     margin-top: .5rem;
+    //     margin-bottom: 0;
+    // }
+
+
 }
