--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,5 @@
 $bg-color: #fff;
 $color-yellow: #FFD23F;
 $color-dark: #121619;
-$color-blue: #758ECD;
+$color-blue: #4B6CBE;
+$color-rainbow: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
