--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -22,7 +22,7 @@
     }
 
     &__underline {
-        background: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
+        background: $color-rainbow;
         height: .34rem;
         width: 0%;
         margin-top: .8rem;
