--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -13,6 +13,19 @@
     &__title {
         font-size: 2rem;
         color: white;
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+        margin-bottom: 1rem;
+    }
+
+    &__list {
+        margin-top: .5rem;
+    }
+
+    &__logo {
+        margin-right: .5rem;
+        margin-bottom: .3rem;
     }
 
     &__link {
