[Signup] added material ui for inputs

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,4 +2,6 @@ $bg-color: #fff;
 $color-yellow: #FFD23F;
 $color-dark: #121619;
 $color-blue: #4B6CBE;
+$color-neon_blue: #00c3ff;
 $color-rainbow: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
+$bg-gray: rgb(244, 244, 244);
