--- a/src/styles/pages/_signup.scss
+++ b/src/styles/pages/_signup.scss
@@ -14,7 +14,7 @@
         background-color: white;
         width: 50rem;
         height: auto;
-        padding-bottom: 3rem;
+        padding-bottom: 1.3rem;
         margin: 3rem auto;
         display: flex;
         flex-direction: column;
@@ -39,4 +39,20 @@
          cursor: pointer;
          background-color: rgba($color-blue, .9);
      }
+
+     &__text {
+         font-size: 1.5rem;
+         margin-top: 1rem;
+     }
+
+     &__link {
+         text-decoration: none;
+         font-weight: 500;
+         color: $color-red;
+     }
+
+     &__link:hover {
+         text-decoration: underline;
+     }
+
 }
