[PrivateNav] popup menu working

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,6 +2,7 @@
 @import "./pages/landing";
 @import "./pages/signup";
 @import "./components/navigation";
+@import "./components/privatenav";
 @import "./variables.scss";
 
 
