[manage] more styling grid and nav

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800&display=swap');
 @import "./pages/landing";
 @import "./pages/signup";
+@import "./pages/manage";
 @import "./components/navigation";
 @import "./components/privatenav";
 @import "./variables.scss";
