[ManageProfile] phone added and a lot responsive css added

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,6 +4,7 @@
 @import "./pages/manage";
 @import "./components/navigation";
 @import "./components/privatenav";
+@import "./components/phone";
 @import "./variables.scss";
 
 
