[ManageProfile] added arrow

--- a/src/styles/components/_build.scss
+++ b/src/styles/components/_build.scss
@@ -16,6 +16,15 @@
         font-size: 1.5rem;
         font-weight: 500;
     }
+    
+    &__arrow {
+        width: 2rem;
+        position: absolute;
+        top: 50%;
+        right: 2rem;
+        transform: translateY(-50%);
+
+    }
 
 
 }
