[Build] transitions for pill draw

--- a/src/styles/components/_build.scss
+++ b/src/styles/components/_build.scss
@@ -31,23 +31,27 @@
     }
 
     &__pillbox {
+        visibility: visible;
+        opacity: 1;
         position: relative;
         display: flex;
         flex-direction: row;
         border-bottom: 1px solid lightgray;
         width: 100%;
         background-color: white;
-        transition: all .6s;
+        transition: all .1s;
     }
 
     &__pill {
         margin: 1rem;
+        opacity: 1;
         padding: 1rem;
         font-size: 1.4rem;
         font-weight: 500;
         border-radius: 1.3rem;
         background-color: rgba($color-neon_blue, .5);
         text-transform: lowercase;
+        transition: all .1s;
     }
 }
 
@@ -67,9 +71,11 @@
 }
 
 #show:checked ~ .build__pillbox {
-    height: 0;
+    visibility: hidden;
+    opacity: 0;
 }
 
 #show:checked ~ .build__pillbox > .build__pill {
-    display: none;
+    visibility: hidden;
+    opacity: 0;
 }
