build] new btn approach

--- a/src/styles/components/_build.scss
+++ b/src/styles/components/_build.scss
@@ -4,96 +4,32 @@
     display: flex;
     flex-direction: column;
 
-    &__components {
-        height: 6rem;
-        border-bottom: 1px solid lightgray;
-        background-color: #fff;
-        position: relative;
-    }
-
-    &__components:hover {
-        cursor: pointer;
-    }
-
-    &__text {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        left: 1rem;
-        font-size: 1.5rem;
-        font-weight: 500;
-    }
-
-    &__arrow {
-        width: 2rem;
-        position: absolute;
-        top: 50%;
-        right: 2rem;
-        transform: translateY(-50%);
-        transition: all 0.4s;
-    }
-
-    &__pillbox {
-        visibility: visible;
-        opacity: 1;
-        position: relative;
-        display: flex;
-        flex-direction: row;
-        border-bottom: 1px solid lightgray;
-        width: 100%;
-        background-color: white;
-        transition: all .3s;
-    }
-
-    &__pill {
-        margin: 1rem;
-        opacity: 1;
-        padding: 1rem;
-        font-size: 1.4rem;
-        font-weight: 500;
-        border-radius: 1.3rem;
-        background-color: rgba($color-neon_blue, .5);
-        text-transform: lowercase;
-        transition: all .3s;
-    }
-
     &__sandbox {
-        border: solid 1px red;
         height: 100%;
-        display: flex;
-        justify-content: center;
+        text-align: center;
     }
 
-    &__element {
+    &__btn {
+        margin: 3rem auto;
+        font-size: 1.5rem;
+        padding: 1.3rem;
         width: 80%;
-        height: 10rem;
-        background-color: white;
-        margin-top: 2rem;
+        border-radius: 1rem;
+        background-color: $color-blue;
+        color: white;
+        border: none;
+        outline: none;
+    }   
+
+    &__btn:hover {
+        cursor: pointer;
+        transform: translateY(-.05rem);
+        box-shadow: 0 .5rem 1rem 0 rgba(0,0,0,0.27);
+    }
+    
+    &__btn:active {
+        transform: translateY(.05rem);
+        box-shadow: 0 .4rem .5rem 0 rgba(0,0,0,0.27);
     }
 }
 
-#show {
-    position: fixed;
-    right: 10rem;
-    top: 1rem;
-}
-
-
-#show:checked + .build__components > .build__arrow {
-    width: 2rem;
-    position: absolute;
-    top: 50%;
-    right: 2rem;
-    transform: translateY(-50%) rotate(180deg);
-}
-
-#show:checked ~ .build__pillbox {
-    visibility: hidden;
-    height: 0;
-    opacity: 0;
-}
-
-#show:checked ~ .build__pillbox > .build__pill {
-    visibility: hidden;
-    opacity: 0;
-}
