--- a/src/styles/components/_build.scss
+++ b/src/styles/components/_build.scss
@@ -35,14 +35,23 @@
 
     &__pillbox {
         visibility: visible;
+        border-top: 1px solid $color-dark;
+        border-bottom: 1px solid $color-dark;
+        border-right: 1px solid $color-dark;
         opacity: 1;
-        position: relative;
         display: flex;
+        padding: .5rem 3rem;
         flex-direction: row;
-        border-bottom: 1px solid lightgray;
+        justify-content: space-between;
         width: 100%;
         background-color: white;
         transition: all .3s;
+    }
+
+    &__options {
+        visibility: visible;
+        opacity: 1;
+        position: relative;
     }
 
     &__pill {
@@ -52,13 +61,13 @@
         font-size: 1.4rem;
         font-weight: 500;
         border-radius: 1.3rem;
-        background-color: rgba($color-neon_blue, .5);
         text-transform: lowercase;
         transition: all .3s;
+        color: black;
     }
 
     &__sandbox {
-        border: solid 1px red;
+        // border: solid 1px red;
         height: 100%;
         display: flex;
         justify-content: center;
@@ -87,7 +96,7 @@
     transform: translateY(-50%) rotate(180deg);
 }
 
-#show:checked ~ .build__pillbox {
+#show:checked ~ .build__options {
     visibility: hidden;
     height: 0;
     opacity: 0;
