[Sandbox] more styling

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,6 +4,7 @@
 @import "./pages/manage";
 @import "./components/navigation";
 @import "./components/privatenav";
+@import "./components/sandbox";
 @import "./components/phone";
 @import "./components/build";
 @import "./variables.scss";
