--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,6 +5,7 @@
 @import "./components/navigation";
 @import "./components/privatenav";
 @import "./components/sandbox";
+@import "./components/about";
 @import "./components/phone";
 @import "./components/build";
 @import "./variables.scss";
