[ABout] hitting the update route

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -48,4 +48,14 @@
         cursor: pointer;
         background-color: rgba($color-blue, .9);
     }
+
+    &__container {
+        background-color: white;
+        padding: 1rem;
+        width: 90%;
+        margin-bottom: 1rem;
+    }
+
+
+
 }
