--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -29,3 +29,9 @@ html {
 body {
   font-family: "Raleway", sans-serif;
 }
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
