--- a/src/styles/components/_sandbox.scss
+++ b/src/styles/components/_sandbox.scss
@@ -3,4 +3,10 @@
     display: flex;
     justify-content: center;
     border: solid 2px red;
+
+
+    &__title {
+        font-size: 2rem;
+        font-weight: 600;
+    }
 }
