[Manage, About] properly setting about information

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -42,6 +42,7 @@
         color: white;
         font-weight: 600;
         font-size: 1.5rem;
+        outline: none;
     }
 
     &__submit:hover {
