--- a/src/styles/components/_phone.scss
+++ b/src/styles/components/_phone.scss
@@ -18,4 +18,12 @@
         font-size: 1.2vw;
     }
 
+    &__about {
+        position: absolute;
+        top: 3rem;
+        left: 1rem;
+        font-size: 1.5rem;
+        font-size: 1.2vw;
+    }
+
 }
