--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -33,6 +33,18 @@
         border: solid 2px lightgray;
     }
 
+    &__btn {
+        margin-top: 2rem;
+        padding: 1rem 0;
+        border: none;
+        border-radius: 1rem;
+        background-color: rgb(198, 198, 198);
+        color: white;
+        font-weight: 600;
+        font-size: 1.5rem;
+        outline: none;
+    }
+
     &__submit {
         margin-top: 2rem;
         padding: 1rem 0;
