[Soundtrack] added styling for form

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -8,6 +8,7 @@
 @import "./components/about";
 @import "./components/phone";
 @import "./components/build";
+@import "./components/soundtrack";
 @import "./variables.scss";
 
 
