--- a/src/styles/components/_soundtrack.scss
+++ b/src/styles/components/_soundtrack.scss
@@ -71,4 +71,9 @@
         cursor: pointer;
         background-color: rgba($color-blue, .9);
     }
+
+    &__selection-img {
+        width: 30rem;
+        height: 30rem;
+    }
 }
