--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -9,6 +9,9 @@
 @import "./components/phone";
 @import "./components/build";
 @import "./components/soundtrack";
+@import "./components/blurb";
+@import "./components/link";
+@import "./components/spotify";
 @import "./variables.scss";
 
 
