--- a/src/styles/components/_sandbox.scss
+++ b/src/styles/components/_sandbox.scss
@@ -9,4 +9,14 @@
         font-size: 2rem;
         font-weight: 600;
     }
+
+    &__icon {
+        width: 1.4rem;
+        height: 1.4rem;
+        margin-left: .5rem;
+    }
+
+    &__icon:hover {
+        cursor: pointer;
+    }
 }
