--- a/src/styles/components/_blurb.scss
+++ b/src/styles/components/_blurb.scss
@@ -1,11 +1,12 @@
 .blurb {
     margin: 1rem 0;
-    border-radius: .2rem;
+    border-radius: .5rem;
     box-shadow: 0 .1rem 1rem 0 rgba(0,0,0,0.27);
 
     &__tag {
         color: white;
-        background-color: $color-dark;
+        background-color: $color-blue;
+        border-radius: .5rem .5rem 0 0;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
