--- a/src/styles/components/_sandbox.scss
+++ b/src/styles/components/_sandbox.scss
@@ -2,7 +2,6 @@
     height: 100%;
     display: flex;
     justify-content: center;
-    border: solid 2px red;
 
 
     &__title {
@@ -18,5 +17,10 @@
 
     &__icon:hover {
         cursor: pointer;
+    }
+
+    &__label {
+        font-weight: 500;
+        font-size: 1.5rem;
     }
 }
