--- a/src/styles/components/_spotify.scss
+++ b/src/styles/components/_spotify.scss
@@ -1,11 +1,12 @@
 .spotify {
     margin: 1rem 0;
-    border-radius: .2rem;
+    border-radius: .5rem;
     box-shadow: 0 .1rem 1rem 0 rgba(0,0,0,0.27);
 
     &__tag {
         color: white;
-        background-color: $color-dark;
+        border-radius: .5rem .5rem 0 0;
+        background-color: $color-yellow;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -13,22 +14,26 @@
         align-items: center;
     }
 
-    &__label {
-        font-weight: 500;
-        font-size: 1.5rem;
-    }
-
     &__container {
         padding: .5rem;
         cursor: default;
+        display: flex;
+        flex-direction: row;
     }
 
-    &__heading {
-        font-size: 1.8rem;
+    &__lead {
         font-weight: 500;
+        font-size: 1.8rem;
     }
 
-    &__content {
+    &__artist {
         font-size: 1.5rem;
     }
+
+    &__img {
+        width: 10rem;
+        height: 10rem;
+        margin-right: 1rem;
+    }
+
 }
