--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,8 @@
 $bg-color: #fff;
-$color-yellow: #FFD23F;
+$color-yellow: #eba103;
 $color-dark: #121619;
-$color-blue: #4B6CBE;
+$color-blue: #3f5da9;
 $color-neon_blue: #00c3ff;
-$color-red: rgb(255, 60, 0);
+$color-red: rgb(208, 3, 3);
 $color-rainbow: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
 $bg-gray: rgb(233, 233, 233);
