[dnd] added delte div to every dnd

--- a/src/styles/components/_sandbox.scss
+++ b/src/styles/components/_sandbox.scss
@@ -56,8 +56,9 @@
         font-weight: 600;
         text-transform: uppercase;
         animation: fadeIn .3s;
+        outline: none;
     }
-
+    
     &__cancel-btn {
         width: 47%;
         padding: .5rem;
@@ -70,6 +71,7 @@
         font-weight: 600;
         text-transform: uppercase;
         animation: fadeIn .3s;
+        outline: none;
     }
 
     &__delete-btn:hover {
