[DndBlurb] edit form functionality

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -39,3 +39,10 @@ body {
   flex-direction: row;
   justify-content: space-between;
 }
+
+#text-area {
+  font-family: "Raleway", sans-serif;
+  font-size: 1.5rem;
+  line-height: 1.3;
+  min-height: 10rem;
+}
