[DndBlurb] added switch still need to adjust the styling

--- a/src/styles/components/_sandbox.scss
+++ b/src/styles/components/_sandbox.scss
@@ -83,6 +83,12 @@
         cursor: pointer;
         background-color: rgba(rgb(150, 150, 150),.9);
     }
+
+    &__options-container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
 }
 
 
