[phoneScss] more responsive styling

--- a/src/styles/components/_phone.scss
+++ b/src/styles/components/_phone.scss
@@ -4,7 +4,7 @@
     height: 0;
     padding-bottom: 110%;
     border: solid 1.1vw black;
-    border-radius: 3.5rem;
+    border-radius: 2.5vw;
     overflow: auto;
     margin: 3rem auto;
     background-color: #fff;
@@ -44,8 +44,8 @@
     }
 
     &__icon {
-        width: 1.5rem;
-        height: 1.5rem;
+        width: 1.3vw;
+        height: 1.3vw;
         margin-right: .5rem;
     }
 
