[feedSound] basic setup for soun styling

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -12,6 +12,9 @@
 @import "./components/blurb";
 @import "./components/link";
 @import "./components/spotify";
+@import "./components/feedLink";
+@import "./components/feedBlurb";
+@import "./components/feedSound";
 @import "./variables.scss";
 
 
