[feedBlurb] dinished with basic styling

--- a/src/styles/components/_feedSound.scss
+++ b/src/styles/components/_feedSound.scss
@@ -1,7 +1,7 @@
 .feedsound {
     position: relative;
     border: solid 1px $color-dark;
-    margin: 1vw;
+    margin: 1vw .5vw;
     padding: 1vw;
     border-radius: .5vw;
     display: flex;
