--- a/src/styles/components/_feedLink.scss
+++ b/src/styles/components/_feedLink.scss
@@ -1,3 +1,20 @@
 .feedlink {
-    
+    margin: 1vw .5vw;
+    border: solid 1px $color-dark;
+    margin: 1vw .5vw;
+    border-radius: .5vw;
+    padding: 1vw;
+
+    &__atag {
+        text-decoration: none;
+    }
+
+    &__title {
+        font-size: 1.5vw;
+        color: black;
+    }
+}
+
+.feedlink:hover {
+    cursor: pointer;
 }
