--- a/src/styles/components/_sandbox.scss
+++ b/src/styles/components/_sandbox.scss
@@ -89,6 +89,7 @@
         flex-direction: row;
         align-items: center;
         position: relative;
+        margin-right: 3.5rem;
     }
 
 }
