--- a/src/styles/components/_build.scss
+++ b/src/styles/components/_build.scss
@@ -22,6 +22,7 @@
         left: 1rem;
         font-size: 1.5rem;
         font-weight: 500;
+        user-select: none;
     }
 
     &__arrow {
@@ -144,7 +145,7 @@
         height: 0;
     }
     100% {
-        height: 100%;
+        height: 65%;
     }
 }
 
