--- a/src/styles/components/_build.scss
+++ b/src/styles/components/_build.scss
@@ -31,6 +31,7 @@
         top: 50%;
         right: 2rem;
         transform: translateY(-50%);
+        user-select: none;
         transition: all 0.4s;
     }
 
@@ -39,7 +40,7 @@
     }
     
     &__options {
-        animation: drawyerDown 1s;
+        animation: drawyerDown .5s;
     }
 
     &__pillbox {
