--- a/src/styles/components/_feedLink.scss
+++ b/src/styles/components/_feedLink.scss
@@ -1,9 +1,9 @@
 .feedlink {
     margin: 1vw .5vw;
-    border: solid 1px $color-dark;
     margin: 1vw .5vw;
     border-radius: .5vw;
     padding: 1vw;
+    background-color: rgb(242, 195, 195);
 
     &__atag {
         text-decoration: none;
@@ -11,11 +11,13 @@
 
     &__title {
         font-size: 1.5vw;
-        font-weight: 600;
+        font-weight: 500;
         color: black;
+        letter-spacing: 1px;
     }
 }
 
 .feedlink:hover {
     cursor: pointer;
+    background-color: rgb(245, 162, 162);
 }
