--- a/src/styles/components/_feedSound.scss
+++ b/src/styles/components/_feedSound.scss
@@ -1,12 +1,12 @@
 .feedsound {
     position: relative;
-    border: solid 1px $color-dark;
     margin: 1vw .5vw;
     padding: 1vw;
     border-radius: .5vw;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: rgb(249, 219, 175);
 
     &__heading {
         position: absolute;
@@ -30,4 +30,8 @@
     &__artist {
         font-size: 1vw;
     }
+}
+
+.feedsound:hover {
+    background-color: rgb(255, 205, 131);
 }
