--- a/src/styles/components/_phone.scss
+++ b/src/styles/components/_phone.scss
@@ -12,7 +12,7 @@
     &__profile-pic {
         width: 6vw;
         height: 6vw;
-        border: solid $color-dark 2px;
+        border: solid $color-dark .5px;
         border-radius: 10%;
     }
 
