[All Comment] added ability to create a comment

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -11,10 +11,12 @@
 @import "./components/soundtrack";
 @import "./components/blurb";
 @import "./components/link";
+@import "./components/comment";
 @import "./components/spotify";
 @import "./components/feedLink";
 @import "./components/feedBlurb";
 @import "./components/feedSound";
+@import "./components/feedComment";
 @import "./variables.scss";
 
 
